# solRus

./: README.md  solrus.sh
rinterface/eth_key/: Cargo.toml
rinterface/eth_key/src/: eth_hash_and_signature.rs  lib.rs
rinterface/lib/: Cargo.toml  README.md
rinterface/lib/src/: channel_types.rs  constants.rs  lib.rs
rinterface/rpc_server/: Cargo.toml
rinterface/rpc_server/src/: lib.rs
smartContract/: package.json
smartContract/contracts/: ECVerify.sol  ETHWallet.sol  PaymentChannels.sol  SafeMath.sol  Store.sol
smartContract/migrations/: 2_deploy_contracts.js
smartContract/test/: closeChannel.js  mainTest.js  newChannel.js  startCal.js  startSettlingPeriod.js  uftest.html  updateState.js  utest.html  utest.js  utils.js
