[package]
name = "lib"
version = "0.1.0"
authors = ["janus <emekamicro@gmail.com>"]
description = "Rust Solidity Exchange POC"



[dependencies]
base64 = "0.6.0"
serde = "1.0.24"
serde_derive = "1.0.24"
serde_json = "1.0.8"
rustc-hex = "1.0.0"
multihash = "*"
num256 = {path = "../lib/duu/althea_rs/num256"}
ethkey = {path = "../lib/duu/parity/ethkey"}
eth_key = {path = "../eth_key"}
rpc_server = {path = "../rpc_server"}





